// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo config import "frodo config import --default -CAD test/e2e/exports/all-separate/cloud" Import everything from directory "test/e2e/exports/all-separate/cloud", including default scripts. Clean old services 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1720799681233 [b672336b-41ef-428d-ae4a-e0c082875377]
Error updating config entity endpoint/Test
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
Error updating config entity endpoint/testEndpoint2
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
Error Importing Services
  Error importing services
  Error putting global full service configs
  Error putting global full service config CorsService
  Error deleting service 'CorsService' before import
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: The singleton resource cannot be deleted
  Error putting global full service config dashboard
  Error deleting service 'dashboard' before import
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: The singleton resource cannot be deleted
Error updating alpha realm script
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 403
    Reason: Forbidden
    Message: This operation is not available in PingOne Advanced Identity Cloud.
Error updating alpha realm script
  HTTP client error
    Code: ERR_BAD_RESPONSE
    Status: 502
- Resolving alpha realm dependencies
✔ Resolved all alpha realm dependencies.
Error Importing Services
  Error importing services
  Error putting alpha realm full service configs
  Error putting alpha realm full service config email
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: Data validation failed for the attribute, Transport Type
Error updating bravo realm script
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 403
    Reason: Forbidden
    Message: This operation is not available in PingOne Advanced Identity Cloud.
Error updating bravo realm script
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 403
    Reason: Forbidden
    Message: This operation is not available in PingOne Advanced Identity Cloud.
- Resolving bravo realm dependencies
✔ Resolved all bravo realm dependencies.
Error Importing Services
  Error importing services
  Error putting bravo realm full service configs
  Error putting bravo realm full service config TNTPPingOneService
  Error putting descendent 'JC' of service 'TNTPPingOneService'
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: Invalid config: Unable to add subConfig PingOneService
"
`;

exports[`frodo config import "frodo config import --file test/e2e/exports/all-separate/cloud/realm/root-alpha/script/mode.script.json" Import mode.script.json long with extracted scripts and no errors 1`] = `""`;

exports[`frodo config import "frodo config import --global --file test/e2e/exports/all-separate/classic/global/authenticationModules/authPushReg.authenticationModules.json --type classic" Fail to import authentication module due to it being read only. 1`] = `
"Connected to http://openam-frodo-dev.classic.com:8080/am [/] as user amAdmin
No imports were made
"
`;

exports[`frodo config import "frodo config import -AD test/e2e/exports/all-separate/cloud --include-active-values" Import everything with secret values from directory "test/e2e/exports/all-separate/cloud" 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1720799681233 [b672336b-41ef-428d-ae4a-e0c082875377]
Error updating config entity endpoint/Test
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
Error updating config entity endpoint/testEndpoint2
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
- Resolving alpha realm dependencies
✔ Resolved all alpha realm dependencies.
Error Importing Services
  Error importing services
  Error putting alpha realm full service configs
  Error putting alpha realm full service config email
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: Data validation failed for the attribute, Transport Type
- Resolving bravo realm dependencies
✔ Resolved all bravo realm dependencies.
"
`;

exports[`frodo config import "frodo config import -AD test/e2e/exports/all-separate/cloud" Import everything from directory "test/e2e/exports/all-separate/cloud" 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1720799681233 [b672336b-41ef-428d-ae4a-e0c082875377]
Error updating config entity endpoint/Test
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
- Resolving alpha realm dependencies
✔ Resolved all alpha realm dependencies.
Error Importing Services
  Error importing services
  Error putting alpha realm full service configs
  Error putting alpha realm full service config email
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: Data validation failed for the attribute, Transport Type
- Resolving bravo realm dependencies
✔ Resolved all bravo realm dependencies.
"
`;

exports[`frodo config import "frodo config import -AdD test/e2e/exports/all-separate/classic -m classic" Import everything from directory "test/e2e/exports/all-separate/classic" 1`] = `
"Connected to http://openam-frodo-dev.classic.com:8080/am [/] as user amAdmin
Error Importing Authentication Settings
  Error importing / realm authentication settings
  Error updating / realm authentication settings
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 404
    Reason: Not Found
    Message: Resource '' not found
- Resolving / realm dependencies
✔ Resolved all / realm dependencies.
- Resolving first realm dependencies
✔ Resolved all first realm dependencies.
- Resolving second realm dependencies
✔ Resolved all second realm dependencies.
"
`;

exports[`frodo config import "frodo config import -CAD test/e2e/exports/all-separate/cloud" Import everything from directory "test/e2e/exports/all-separate/cloud". Clean old services 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1720799681233 [b672336b-41ef-428d-ae4a-e0c082875377]
Error updating config entity endpoint/Test
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
Error Importing Services
  Error importing services
  Error putting global full service configs
  Error putting global full service config CorsService
  Error deleting service 'CorsService' before import
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: The singleton resource cannot be deleted
  Error putting global full service config dashboard
  Error deleting service 'dashboard' before import
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: The singleton resource cannot be deleted
- Resolving alpha realm dependencies
✔ Resolved all alpha realm dependencies.
Error Importing Services
  Error importing services
  Error putting alpha realm full service configs
  Error putting alpha realm full service config email
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: Data validation failed for the attribute, Transport Type
- Resolving bravo realm dependencies
✔ Resolved all bravo realm dependencies.
"
`;

exports[`frodo config import "frodo config import -aCf test/e2e/exports/all/all.cloud.json" Import everything from "all.cloud.json". Clean old services 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1720799681233 [b672336b-41ef-428d-ae4a-e0c082875377]
Error updating config entity endpoint/Test
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
Error updating config entity endpoint/testEndpoint2
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
Error Importing Services
  Error importing services
  Error putting global full service configs
  Error putting global full service config CorsService
  Error deleting service 'CorsService' before import
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: The singleton resource cannot be deleted
  Error putting global full service config dashboard
  Error deleting service 'dashboard' before import
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: The singleton resource cannot be deleted
- Resolving alpha realm dependencies
✔ Resolved all alpha realm dependencies.
Error Importing Services
  Error importing services
  Error putting alpha realm full service configs
  Error putting alpha realm full service config email
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: Data validation failed for the attribute, Transport Type
- Resolving bravo realm dependencies
✔ Resolved all bravo realm dependencies.
"
`;

exports[`frodo config import "frodo config import -adf test/e2e/exports/all/all.classic.json -m classic" Import everything from "all.classic.json", including default scripts. 1`] = `
"Connected to http://openam-frodo-dev.classic.com:8080/am [/] as user amAdmin
Error Importing Authentication Settings
  Error importing / realm authentication settings
  Error updating / realm authentication settings
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 404
    Reason: Not Found
    Message: Resource '' not found
- Resolving / realm dependencies
✔ Resolved all / realm dependencies.
- Resolving first realm dependencies
✔ Resolved all first realm dependencies.
- Resolving second realm dependencies
✔ Resolved all second realm dependencies.
"
`;

exports[`frodo config import "frodo config import -adf test/e2e/exports/all/all.cloud.json" Import everything from "all.cloud.json", including default scripts. 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1720799681233 [b672336b-41ef-428d-ae4a-e0c082875377]
Error updating config entity endpoint/Test
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
Error updating config entity endpoint/testEndpoint2
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 401
    Reason: Unauthorized
    Message: Access Denied
Error updating alpha realm script
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 403
    Reason: Forbidden
    Message: This operation is not available in PingOne Advanced Identity Cloud.
Error updating alpha realm script
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 403
    Reason: Forbidden
    Message: This operation is not available in PingOne Advanced Identity Cloud.
- Resolving alpha realm dependencies
✔ Resolved all alpha realm dependencies.
Error Importing Services
  Error importing services
  Error putting alpha realm full service configs
  Error putting alpha realm full service config email
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 400
    Reason: Bad Request
    Message: Data validation failed for the attribute, Transport Type
Error updating bravo realm script
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 403
    Reason: Forbidden
    Message: This operation is not available in PingOne Advanced Identity Cloud.
Error updating bravo realm script
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 403
    Reason: Forbidden
    Message: This operation is not available in PingOne Advanced Identity Cloud.
- Resolving bravo realm dependencies
✔ Resolved all bravo realm dependencies.
"
`;

exports[`frodo config import "frodo config import -f test/e2e/exports/all-separate/classic/realm/root/webhookService/Cool-Webhook.webhookService.json -m classic" Import the webhook service with no errors 1`] = `""`;

exports[`frodo config import "frodo config import -gf test/e2e/exports/all-separate/classic/global/server/01.server.json -m classic" Import server 01 along with extracted properties and no errors 1`] = `""`;

exports[`frodo config import "frodo config import -gf test/e2e/exports/all-separate/cloud/global/sync/sync.idm.json" Import sync.idm.json along with extracted mappings and no errors 1`] = `""`;
